--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build&&move dist/_next dist/next&&sed -i '' -e 's/\\/_next/\\.\\/next/g' dist/**.html",
+    "build": "next build",
+    "build:extension": "next build&&move dist/_next dist/next&&sed -i '' -e 's/\\/_next/\\.\\/next/g' dist/**.html",
     "start": "next start",
     "lint": "next lint"
   },
