--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "resend": "^3.2.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
