--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build:extension": "next build&&move dist/_next dist/next&&sed -i '' -e 's/\\/_next/\\.\\/next/g' dist/**.html",
     "start": "next start",
     "lint": "next lint",
-    "email:dev": "email dev -p 3001"
+    "email:dev": "email dev -p 3001",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
@@ -33,12 +35,23 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.5.0",
+    "@storybook/addon-essentials": "^8.1.6",
+    "@storybook/addon-interactions": "^8.1.6",
+    "@storybook/addon-links": "^8.1.6",
+    "@storybook/addon-onboarding": "^8.1.6",
+    "@storybook/blocks": "^8.1.6",
+    "@storybook/nextjs": "^8.1.6",
+    "@storybook/react": "^8.1.6",
+    "@storybook/test": "^8.1.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-storybook": "^0.8.0",
     "postcss": "^8",
+    "storybook": "^8.1.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
